--- a/Minesweeper/Minesweeper.csproj
+++ b/Minesweeper/Minesweeper.csproj
@@ -116,41 +116,17 @@
   <ItemGroup>
     <Compile Include="Game\MineGrid.cs" />
     <Compile Include="Game\Point.cs" />
-    <Compile Include="Migrations\202503101912108_InitialCreate.cs" />
-    <Compile Include="Migrations\202503101912108_InitialCreate.Designer.cs">
-      <DependentUpon>202503101912108_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202504071151224_UserPassword.cs" />
-    <Compile Include="Migrations\202504071151224_UserPassword.Designer.cs">
-      <DependentUpon>202504071151224_UserPassword.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202504091057261_NullableSavedGameUser.cs" />
-    <Compile Include="Migrations\202504091057261_NullableSavedGameUser.Designer.cs">
-      <DependentUpon>202504091057261_NullableSavedGameUser.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="Migrations\202503101912108_InitialCreate.resx">
-      <DependentUpon>202503101912108_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202504071151224_UserPassword.resx">
-      <DependentUpon>202504071151224_UserPassword.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202504091057261_NullableSavedGameUser.resx">
-      <DependentUpon>202504091057261_NullableSavedGameUser.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -164,7 +140,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.5.2.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.5.2.1\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
